# meta-agent-gym

./: .env.example  .gitattributes  .gitignore  AGENTSMITH-RL.md  Blog.md  CLAUDE.md  FINALE_GUIDE.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  PRESENTATION_CHECKLIST.md  PRIORITY_TABLE.md  README.md  __init__.py  client.py  demo_trained_agent.py  inference.py  models.py  openenv.yaml  package-lock.json  pyproject.toml  test_interactive.py
.claude/: settings.local.json
competition/: COMPETITION_PITCH.md  COMPETITION_SUMMARY.md  GITHUB_COMMIT_CHECKLIST.md  HACKATHON_PRESENTATION.md  ONSITE_IMPLEMENTATION_GUIDE.md  README.md  REWARD_PIPELINE_EXCELLENCE.md  STORYTELLING_NARRATIVE.md  SUBMISSION_CHECKLIST.md
evaluation/: goose_execution.py  onsite_evaluation.py  simple_evaluation.py
examples/: README.md
learnings/: Hackathon FAQs (participants).md  SKILLS_REFERENCE.md  SUBAGENT_REFERENCE.md
meta-agent-gym-results/: summary.json
monitoring/: report.json
notebooks/: 01_demo_episode.ipynb  02_train_grpo.ipynb  03_evaluate.ipynb  train_colab.ipynb
scripts/: baseline_rollout.sh  demo_reward_fix.py  deploy.sh  generate_demo_results.py  generate_plots.py  organize_colab_results.py  smoke_test.sh
server/: Dockerfile  __init__.py  adversarial.py  app.py  environment.py  inference_service.py  judge.py  robust_environment.py  skills.py  verifiers.py
static/: index.html
tests/: conftest.py  test_agent_spec.py  test_inference_service.py  test_meta_agent_env.py  test_meta_agent_reward.py  test_observation_quality.py  test_reward_quality.py  test_skills.py  (+4 more)
(+130 files in other folders)
